...

    private static let keyCodeToCharacter: [UInt16: String] = {
        var keys: [UInt16: String] = [:]
        keys[UInt16(kVK_Space)] = "Space"
        keys[UInt16(kVK_Return)] = "󰌑"
        keys[UInt16(kVK_Escape)] = "⎋"
        keys[UInt16(kVK_Delete)] = "Delete"
        keys[UInt16(kVK_Tab)] = "Tab"
        keys[UInt16(kVK_ANSI_KeypadEnter)] = "Enter"
        keys[UInt16(kVK_UpArrow)] = "↑"
        keys[UInt16(kVK_DownArrow)] = "↓"
        keys[UInt16(kVK_LeftArrow)] = "←"
        keys[UInt16(kVK_RightArrow)] = "→"
...
